# graceful-music

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  ape.c  ape.h  browser.c  browser.h  buffer.c  buffer.h  cache.c  cache.h  channelmap.h  cmus.c  cmus.h  command_mode.c  command_mode.h  comment.c  comment.h  config.mk  convert.h  cue.h  cue_utils.c  cue_utils.h  discid.h  editable.c  editable.h  expr.c  expr.h  file.c  file.h  filters.c  filters.h  format_print.c  format_print.h  gbuf.c  gbuf.h  glob.c  glob.h  global.h  graceful-music.c  graceful-music.h  help.c  (+91 more)
app/common/: channel-map.c  channel-map.h  channelmap.c  common.cmake  compiler.h  debug.c  debug.h  id3.c  id3.h  keyval.h  prog.c  prog.h  sf.h  utils.c  utils.h  xmalloc.c  xmalloc.h
app/functions/: functions.cmake  search.c  search.h
app/ip/: aac.c  aac.h  bass.c  cdio.c  cue.c  ffmpeg.c  flac.c  mad.c  mikmod.c  modplug.c  mp4.c  mpc.c  nomad.c  nomad.h  opus.c  vorbis.c  vtx.c  wav.c  wavpack.c
app/op/: alsa.c  ao.c  arts.c  coreaudio.c  jack.c  mixer_alsa.c  mixer_oss.c  mixer_sun.c  oss.c  pulse.c  roar.c  sndio.c  sun.c  waveout.c
app/plugins/: input-interface.h  interface.c  interface.h  mixer-interface.h  output-interface.h  plugins.cmake
app/plugins/input/: aac.c  aac.h  bass.c  bass.h  ffmpeg.c  ffmpeg.h  flac.c  flac.h  input.cmake
app/plugins/output/: alsa.c  alsa.h  mixer-alsa.c  mixer-alsa.h  output.cmake
app/ui/: ui.cmake
app/ui/curses/: curses-main.c  curses-main.h  curses.cmake  format-print.c  format-print.h  main-window.c  main-window.h  side-favorites.c  side-favorites.h  widget.c  widget.h
demo/: CMakeLists.txt  curses-main-window.c  simple-music-player.c
